页面路由布局初始

--- a/src/assets/style/reset.less
+++ b/src/assets/style/reset.less
@@ -47,6 +47,7 @@ html, body, #app{
 
 body {
   background-color: #f7f8fa;
+  font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', Helvetica, Segoe UI,Arial, Roboto,'PingFang SC', 'Hiragino Sans GB', 'Microsoft Yahei', sans-serif
 }
 
 div { box-sizing: border-box}
