--- a/src/assets/style/var.less
+++ b/src/assets/style/var.less
@@ -1,1 +1,15 @@
 // var 
+
+@primary-color: #1989fa;
+
+// text
+// 主字体颜色
+@text-color: #323233;
+// 主字体颜色2
+@text-color-light-1: #646566;
+// 指辅助、说明文字
+@text-color-light-2: #c8c9cc;
+
+// border
+@border-color: #dcdee0;
+@border: 1px solid @border-color;
