--- a/src/assets/style/var.less
+++ b/src/assets/style/var.less
@@ -1,6 +1,9 @@
 // var 
-
 @primary-color: #1989fa;
+@info-color: @primary-color;
+@success-ccolor: #07c160;
+@error-color: #ee0a24;
+@warn-color: #ed6a0c;
 
 // text
 // 主字体颜色
