add:flow view process

--- a/src/assets/style/mixin.less
+++ b/src/assets/style/mixin.less
@@ -34,3 +34,10 @@
     transform: scaleY(0.5);
   }
 }
+
+.no-data {
+  font-size: 13px;
+  color: @text-color-light-2;
+  text-align: center;
+  padding: 40px;
+}
