--- a/src/assets/style/var.less
+++ b/src/assets/style/var.less
@@ -1,7 +1,7 @@
 // var 
 @primary-color: #1989fa;
 @info-color: @primary-color;
-@success-ccolor: #07c160;
+@success-color: #07c160;
 @error-color: #ee0a24;
 @warn-color: #ed6a0c;
 
