--- a/src/assets/style/reset.less
+++ b/src/assets/style/reset.less
@@ -58,3 +58,17 @@ div { box-sizing: border-box}
 .van-popover__action {
   line-height: 44px !important;
 }
+
+.popover-button {
+  .popover-button__item {
+    width: 100px;
+    line-height: 44px;
+    text-align: center;
+    font-size: 14px;
+    color: #323233;
+    margin: 0px 16px;
+    &:last-child::after {
+      border-bottom-width: 0px !important;
+    }
+  }
+}
