bugfix: 加载中交互优化

--- a/src/assets/style/reset.less
+++ b/src/assets/style/reset.less
@@ -59,6 +59,12 @@ div { box-sizing: border-box}
   line-height: 44px !important;
 }
 
+.van-pull-refresh {
+  .van-pull-refresh__track {
+    min-height: calc(100vh - 70px);
+  }
+}
+
 .popover-button {
   .popover-button__item {
     width: 100px;
