build: switch vue-cli to vite

--- a/src/assets/style/mixin.less
+++ b/src/assets/style/mixin.less
@@ -18,7 +18,7 @@
 
 .no-data {
   font-size: 13px;
-  color: @text-color-light-2;
+  color: @ins-text-color-light-2;
   text-align: center;
   padding: 40px;
 }
