--- a/src/assets/style/var.less
+++ b/src/assets/style/var.less
@@ -7,12 +7,12 @@
 
 // text
 // 主字体颜色
-@text-color: #323233;
+@ins-text-color: #323233;
 // 主字体颜色2
-@text-color-light-1: #646566;
+@ins-text-color-light-1: #646566;
 // 指辅助、说明文字
-@text-color-light-2: #c8c9cc;
+@ins-text-color-light-2: #c8c9cc;
 
 // border
-@border-color: #dcdee0;
-@border: 1px solid @border-color;
+@ins-border-color: #dcdee0;
+@ins-border: 1px solid @ins-border-color;
