feat: 页面切换动画

--- a/src/assets/style/config.less
+++ b/src/assets/style/config.less
@@ -1,7 +1,8 @@
 @import (reference) './var.less';
 @import (reference) './mixin.less';
 
-// vant 主题
+
+// 修改vant样式
 
 @tabs-default-color: #1989fa;
 @dialog-confirm-button-text-color: #1989fa;
