--- a/src/assets/style/var.less
+++ b/src/assets/style/var.less
@@ -1,9 +1,9 @@
 // var 
-@primary-color: #1989fa;
-@info-color: @primary-color;
-@success-color: #07c160;
-@error-color: #ee0a24;
-@warn-color: #ed6a0c;
+@ins-primary-color: #1989fa;
+@ins-info-color: @ins-primary-color;
+@ins-success-color: #07c160;
+@ins-error-color: #ee0a24;
+@ins-warn-color: #ed6a0c;
 
 // text
 // 主字体颜色
