feat: 忘记密码和注册功能

--- a/src/assets/style/config.less
+++ b/src/assets/style/config.less
@@ -4,8 +4,9 @@
 
 // 修改vant样式
 
-@tabs-default-color: #1989fa;
-@dialog-confirm-button-text-color: #1989fa;
-@tree-select-item-active-color: #1989fa;
-@sidebar-selected-border-color: #1989fa;
+@blue: #1D8EE8;
+@tabs-default-color: @blue;
+@dialog-confirm-button-text-color: @blue;
+@tree-select-item-active-color: @blue;
+@sidebar-selected-border-color: @blue;
 @popover-action-line-height: 44;
