--- a/src/assets/style/var.less
+++ b/src/assets/style/var.less
@@ -1,5 +1,5 @@
 // var 
-@ins-primary-color: #1989fa;
+@ins-primary-color: #1D8EE8;
 @ins-info-color: @ins-primary-color;
 @ins-success-color: #07c160;
 @ins-error-color: #ee0a24;
