feat: 注册企业功能

--- a/src/assets/style/mixin.less
+++ b/src/assets/style/mixin.less
@@ -23,3 +23,12 @@
   padding: 40px;
 }
 
+.link-text {
+  color: @ins-primary-color;
+  font-size: 13px;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+}
