--- a/src/assets/style/var.less
+++ b/src/assets/style/var.less
@@ -1,10 +1,12 @@
-// var 
+// color
 @ins-primary-color: #1D8EE8;
 @ins-info-color: @ins-primary-color;
 @ins-success-color: #07c160;
 @ins-error-color: #ee0a24;
 @ins-warn-color: #ed6a0c;
-
+@ins-bg-color: #f7f8fa;
+@ins-border-color: #dcdee0;
+@ins-border-color-light: #eee;
 // text
 // 主字体颜色
 @ins-text-color: #323233;
@@ -14,5 +16,5 @@
 @ins-text-color-light-2: #c8c9cc;
 
 // border
-@ins-border-color: #dcdee0;
-@ins-border: 1px solid @ins-border-color;
+@ins-border: 1px solid @ins-border-color-light;
+@ins-border-radius: 4px;
