feat: 表单附件查看

--- a/src/assets/style/mixin.less
+++ b/src/assets/style/mixin.less
@@ -3,6 +3,12 @@
   position: relative;
 }
 
+.ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .card {
   background: #fff;
   border-radius: 8px;
