feat: 拍照扫描功能

--- a/src/assets/style/iconfont.less
+++ b/src/assets/style/iconfont.less
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "ins-icon"; /* Project id 2177068 */
-  src: url('../font/iconfont.woff2?t=1620974437344') format('woff2'),
-       url('../font/iconfont.woff?t=1620974437344') format('woff'),
-       url('../font/iconfont.ttf?t=1620974437344') format('truetype');
+  src: url('../font/iconfont.woff2?t=1622017719909') format('woff2'),
+       url('../font/iconfont.woff?t=1622017719909') format('woff'),
+       url('../font/iconfont.ttf?t=1622017719909') format('truetype');
 }
 
 .ins-icon {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.ins-icon-camera:before {
+  content: "\e600";
 }
 
 .ins-icon-related:before {
